<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    tools:context=".RegisterActivity">

    <ImageView android:id="@+id/iv_imagen1"
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:src="@drawable/imagen1"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"/>

    <EditText android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:layout_marginTop="@dimen/input_margin"
        />

    <EditText android:id="@+id/et_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="text"
        android:layout_marginTop="@dimen/input_margin"
        />

    <EditText android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/input_margin"
        />

    <EditText android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/input_margin"
        />

    <CheckBox android:id="@+id/cb_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:layout_marginTop="@dimen/input_margin"
        android:textStyle="italic"
        />

    <Button android:id="@+id/btn_signIn"
        android:layout_width="219dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/sig_in"
        android:textColor="@color/dusty_white"
        android:background="@drawable/round_button"
        />
    
</LinearLayout>