<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <ImageView android:id="@+id/iv_grupo2"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:src="@drawable/grupo2"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        />

    <TextView android:id="@+id/tv_ourMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/our_menu"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <GridLayout android:id="@+id/gl_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="50dp">

        <Button android:id="@+id/btn_coldDrinks"
            android:text="@string/cold_drinks"
            android:textColor="@color/dusty_white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:layout_marginRight="2dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="15sp"
            android:paddingVertical="20dp"
            />

        <Button android:id="@+id/btn_hotDrinks"
            android:text="@string/hot_drinks"
            android:textColor="@color/dusty_white"
            android:background="@drawable/second_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:layout_marginRight="2dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="15sp"
            android:paddingVertical="20dp"
            />

        <Button android:id="@+id/btn_buttonSweets"
            android:text="@string/sweets"
            android:textColor="@color/dusty_white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:layout_marginRight="2dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="15sp"
            android:paddingVertical="20dp"
            />

        <Button android:id="@+id/btn_buttonSalties"
            android:text="@string/salties"
            android:textColor="@color/dusty_white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:layout_marginRight="2dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="15sp"
            android:paddingVertical="20dp"
            />

        <Button android:id="@+id/btn_buttonCombos"
            android:text="@string/combos"
            android:textColor="@color/dusty_white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:layout_marginRight="2dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="15sp"
            android:paddingVertical="20dp"
            />

        <Button android:id="@+id/btn_customizable"
            android:text="@string/customizable"
            android:textColor="@color/dusty_white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:layout_marginRight="2dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="15sp"
            android:paddingVertical="20dp"
            />

    </GridLayout>

</LinearLayout>